--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p>Cafe au Life implements Bill Gosper's <a href="http://en.wikipedia.org/wiki/Hashlife">HashLife</a> algorithm. HashLife exploits regularity, so for certain life patterns, it runs at super-linear speed. As <a href="http://raganwald.posterous.com/a-beautiful-algorithm">noted elsewhere</a>, if you set up Gosper's Glider Gun when the Earth was first formed 4.5 billion years ago, and ran one generation per second, in the 143.4 <em>quadrillion</em> seconds that have elapsed since then, the pattern would grow to 23,900,000,000,000,036 live cells. Cafe au Life takes just under two seconds to boot up, and another second to calculate the state of the pattern after 143.4 quadrillion generations.</p>
 
-<p>If you haven't seen how the algorithm works, you owe it to yourself to read the <a href="http://recursiveuniverse/docs/cafeaulife.html">annotated source code</a>.</p>
+<p>If you haven't seen how the algorithm works, you owe it to yourself to read the <a href="http://recursiveuniver.se/docs/cafeaulife.html">annotated source code</a>.</p>
 
 <h3>How can I try it?</h3>
 
@@ -90,7 +90,7 @@ coffee&gt;
 
 <h3>What should I read next?</h3>
 
-<p>The <a href="http://recursiveuniverse/docs/cafeaulife.html">annotated source code</a>.</p>
+<p>The <a href="http://recursiveuniver.se/docs/cafeaulife.html">annotated source code</a>.</p>
 
 <h3>Who's responsible for this?</h3>
 
@@ -117,7 +117,7 @@ and he also writes about <a href="http://raganwald.posterous.com/">project manag
 
 <p>Cafe au Life is freely distributable under the terms of the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.</p>
 
-<p>The annotated source code was generated directly from the <a href="http://recursiveuniverse/docs/cafeaulife.html">original source</a> using <a href="http://jashkenas.github.com/docco/">Docco</a>.</p></article></div>
+<p>The annotated source code was generated directly from the <a href="http://recursiveuniver.se/docs/cafeaulife.html">original source</a> using <a href="http://jashkenas.github.com/docco/">Docco</a>.</p></article></div>
     </div>
   </div>
   <br style="clear:both;">
