--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <body class="logged_in   vis-public env-production ">
 
-      <div class="announce instapaper_body md" data-path="/" id="readme"><span class="name"><span class="icon"></span>README.md</span><article class="markdown-body"><h1>Cafe au Life</h1>
+      <div class="announce instapaper_body md" data-path="/" id="readme"><span class="name"><span class="icon"></span>recursiveuniver.se</span><article class="markdown-body"><h1>Cafe au Life</h1>
 
 <p><img src="https://a248.e.akamai.net/assets.github.com/img/e0c670c0f39987ac024d2f5b02e4b722e763fae1/687474703a2f2f726167616e77616c642e6769746875622e636f6d2f6361666561756c6966652f646f63732f676f73706572735f676c696465725f67756e2e676966" alt="Gosper's Glider Gun"></p>
 
