fixed a markdown artefact

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ and more you can find on <a href="https://github.com/raganwald">Github</a>.</p>
 </ul><p>His hands-on coding blog <a href="https://github.com/raganwald/homoiconic">Homoiconic</a> frequently lights up the Hackerverse,
 and he also writes about <a href="http://raganwald.posterous.com/">project management and other subjects</a>.</p>
 
-<hr><p>**(c) 2012 <a href="http://reginald.braythwayt.com">Reg Braithwaite</a>** (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
+<hr><p><b>(c) 2012 <a href="http://reginald.braythwayt.com">Reg Braithwaite</a></b> (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
 
 <p>Cafe au Life is freely distributable under the terms of the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.</p>
 
