--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ coffee&gt;
 <h3>Who's responsible for this?</h3>
 
 <p>When he's not shipping Ruby, Javascript and Java applications scaling out to millions of users,
-<a href="http://reginald.braythwayt.com">Reg "Raganwald" Braithwaite</a> has authored libraries for Javascript and Ruby programming
+<a href="http://raganwald.com">Reg "Raganwald" Braithwaite</a> has authored libraries for Javascript and Ruby programming
 such as <a href="https://github.com/raganwald/Katy">Katy</a>, <a href="http://github.com/raganwald/JQuery-Combinators">JQuery Combinators</a>,
 <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, <a href="http://github.com/raganwald/andand">andand</a>,
 and more you can find on <a href="https://github.com/raganwald">Github</a>.</p>
@@ -113,7 +113,7 @@ and more you can find on <a href="https://github.com/raganwald">Github</a>.</p>
 </ul><p>His hands-on coding blog <a href="https://github.com/raganwald/homoiconic">Homoiconic</a> frequently lights up the Hackerverse,
 and he also writes about <a href="http://raganwald.posterous.com/">project management and other subjects</a>.</p>
 
-<hr><p>(c) 2012 <b><a href="http://reginald.braythwayt.com">Reg Braithwaite</a></b> (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
+<hr><p>(c) 2012 <b><a href="http://raganwald.com">Reg Braithwaite</a></b> (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
 
 <p>Cafe au Life is freely distributable under the terms of the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.</p>
 
