--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <body class="logged_in   vis-public env-production ">
 
-      <div class="announce instapaper_body md" data-path="/" id="readme"><span class="name"><span class="icon"></span>recursiveuniver.se</span><article class="markdown-body"><h1>Cafe au Life</h1>
+      <div class="announce instapaper_body md" data-path="/" id="readme"><span class="name"><span class="icon"></span><i>recursiveuniver.se</i></span><article class="markdown-body"><h1>Cafe au Life</h1>
 
 <p><img src="http://recursiveuniverse.github.com/docs/gospers_glider_gun.gif" alt="Gosper's Glider Gun"></p>
 
