--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
 
-
 <!DOCTYPE html>
 <html>
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# githubog: http://ogp.me/ns/fb/githubog#">
@@ -84,9 +83,9 @@ coffee&gt;
 
 <p>Cellular automata patterns are a kind of machine, with properties close enough to physical machines that it is very easy to reason by correspondence: If such-and-such is possible for a cellular automaton, it must be possible for a physical machine, therefore research into the capabilities of cellular automata is an important part of research into the capabilities of machines, including our bodies and our brains.</p>
 
-<p>Life theorists have proven all sorts of things about what ought to be possible with Life patterns. Life experimenters have taken it to the next level and have built Universal Turing Machines, self-replicating machines, and all sorts of things that demonstrate the universality of Conway's game of Life. Implementations that can handle very large and/or very long-running Life patterns are an important tool for experimentation.</p>
+<p>Life theorists have proven all sorts of things about what ought to be possible with Life patterns. Life experimenters have taken it to the next level and have built Universal Turing Machines, self-replicating machines, and all sorts of things that demonstrate the universality of Conway's Game of Life. Implementations that can handle very large and/or very long-running Life patterns are an important tool for experimentation.</p>
 
-<p>if you'd like to read more, the most approachable book on the subject is William Poundstone's brilliant <a href="http://www.amazon.com/gp/product/0809252023/ref=as_li_ss_il?ie=UTF8&amp;tag=raganwald001-20&amp;linkCode=as2&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0809252023">The Recursive Universe</a>. Beg, borrow, or steal a copy, new or used. Get it in hardcover while you still can.</p>
+<p>If you'd like to read more, the most approachable book on the subject is William Poundstone's brilliant <a href="http://www.amazon.com/gp/product/0809252023/ref=as_li_ss_il?ie=UTF8&amp;tag=raganwald001-20&amp;linkCode=as2&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0809252023">The Recursive Universe</a>. Beg, borrow, or steal a copy, new or used. Get it in hardcover while you still can.</p>
 
 <h3>What should I read next?</h3>
 
@@ -113,7 +112,7 @@ and more you can find on <a href="https://github.com/raganwald">Github</a>.</p>
 </ul><p>His hands-on coding blog <a href="https://github.com/raganwald/homoiconic">Homoiconic</a> frequently lights up the Hackerverse,
 and he also writes about <a href="http://raganwald.posterous.com/">project management and other subjects</a>.</p>
 
-<hr><p>(c) 2012 <b><a href="http://raganwald.com">Reg Braithwaite</a></b> (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
+<hr><p>(c) 2012 <b><a href="http://braythwayt.com">Reg Braithwaite</a></b> (<a href="http://twitter.com/raganwald">@raganwald</a>)</p>
 
 <p>Cafe au Life is freely distributable under the terms of the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.</p>
 
