updated directly from source-source

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# githubog: http://ogp.me/ns/fb/githubog#">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>resursiveuniver.se</title>
+        <title>recursiveuniver.se</title>
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub" />
     <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -94,7 +94,7 @@ coffee&gt;
 <h3>Who's responsible for this?</h3>
 
 <p>When he's not shipping Ruby, Javascript and Java applications scaling out to millions of users,
-<a href="http://raganwald.com">Reg "Raganwald" Braithwaite</a> has authored libraries for Javascript and Ruby programming
+<a href="http://braythwayt.com">Reg "Raganwald" Braithwaite</a> has authored libraries for Javascript and Ruby programming
 such as <a href="https://github.com/raganwald/Katy">Katy</a>, <a href="http://github.com/raganwald/JQuery-Combinators">JQuery Combinators</a>,
 <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, <a href="http://github.com/raganwald/andand">andand</a>,
 and more you can find on <a href="https://github.com/raganwald">Github</a>.</p>
